--- a/cases/ev-demand.html
+++ b/cases/ev-demand.html
@@ -16,7 +16,7 @@
 
 <body class="bg-slate-50 text-slate-900">
 
-<!-- LANG TOGGLE -->
+<!-- NAV -->
 <nav class="fixed w-full bg-white/90 backdrop-blur border-b z-50">
   <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
     <span class="font-black text-xl">Batuhan Dogan</span>
@@ -24,13 +24,13 @@
   </div>
 </nav>
 
-<!-- HEADER / PROBLEM -->
+<!-- EXECUTIVE SUMMARY -->
 <header class="pt-32 max-w-6xl mx-auto px-6 mb-10 text-center">
   <h1 id="heroTitle" class="text-4xl md:text-5xl font-extrabold mb-4">
     Electric Vehicle Demand Forecast – Germany
   </h1>
   <p id="heroSub" class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto mb-4">
-    The rapid adoption of electric vehicles has created regional inventory imbalances, leading to both overstock and shortages. Using historical sales & registration data, we optimized allocations and improved forecast accuracy.
+    The rapid adoption of electric vehicles (EVs) has created regional inventory imbalances. Some cities experienced overstock, while others faced shortages. Using historical sales and registration data, we optimized allocations and improved forecast accuracy.
   </p>
   <p class="text-slate-500 text-sm">
     <span class="font-semibold">Data sources:</span>
@@ -39,14 +39,14 @@
   </p>
 </header>
 
-<!-- KPI -->
+<!-- KPI ANIMATION -->
 <section class="max-w-6xl mx-auto px-6 mb-10 flex justify-around text-center">
   <div class="card">
-    <p class="kpi" id="invReduction">0</p>
+    <p class="kpi" id="invReduction">0%</p>
     <p class="kpi-label" id="invLabel">Inventory Reduction</p>
   </div>
   <div class="card">
-    <p class="kpi" id="forecastError">0</p>
+    <p class="kpi" id="forecastError">0%</p>
     <p class="kpi-label" id="errorLabel">Forecast Error Improvement</p>
   </div>
   <div class="card">
@@ -55,14 +55,33 @@
   </div>
 </section>
 
+<!-- PROBLEM DEFINITION -->
+<section class="max-w-6xl mx-auto px-6 mb-10">
+  <h2 class="text-2xl font-bold mb-4" id="problemTitle">Problem Definition</h2>
+  <p id="problemText" class="text-slate-700 mb-2">
+    Hamburg, Berlin, and Munich exhibited significant inventory imbalances. For example, Hamburg had 20 vehicles in stock while 50 orders arrived, creating overstock costs, whereas Berlin had 10 vehicles for 25 orders, leading to potential shortages. Our analysis aimed to optimize stock allocation regionally.
+  </p>
+</section>
+
+<!-- DATA & METHODOLOGY -->
+<section class="max-w-6xl mx-auto px-6 mb-10">
+  <h2 class="text-2xl font-bold mb-4" id="dataTitle">Data & Methodology</h2>
+  <ul class="list-disc list-inside text-slate-700 space-y-2">
+    <li>Historical EV sales & listings dataset cleaned in SQL (2.3M rows → filtered 200 relevant vehicles).</li>
+    <li>Regional registrations from ZSW to validate forecast and allocation.</li>
+    <li>Power BI dashboards used for visualization, scenario simulations, and interactive planning.</li>
+    <li>Forecast errors reduced by comparing predicted vs actual monthly demand.</li>
+  </ul>
+</section>
+
 <!-- GRAPHS -->
 <section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-2 gap-8">
   <div class="card">
-    <h2 class="text-xl font-bold mb-4 text-center" id="forecastTitle">Forecast vs Actual Demand</h2>
+    <h3 class="text-xl font-bold mb-4 text-center" id="forecastTitle">Forecast vs Actual Demand</h3>
     <canvas id="forecastChart"></canvas>
   </div>
   <div class="card">
-    <h2 class="text-xl font-bold mb-4 text-center" id="regionalTitle">Regional Inventory – Before & After</h2>
+    <h3 class="text-xl font-bold mb-4 text-center" id="regionalTitle">Regional Inventory – Before & After</h3>
     <canvas id="regionalChart"></canvas>
   </div>
 </section>
@@ -71,20 +90,20 @@
 <section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-2 gap-8">
   <div class="card">
     <h3 class="text-xl font-bold mb-4" id="recTitle">Recommendations</h3>
-    <ul class="list-disc list-inside text-slate-700 space-y-2" id="recList">
-      <li>Implement region-wise inventory dashboards with weekly SQL updates for operations.</li>
-      <li>Prioritize high-demand cities while reducing overstock in low-demand areas.</li>
-      <li>Integrate Power BI interactive dashboards for scenario simulations and trend monitoring.</li>
-      <li>Regularly update forecasts using historical sales & registration data.</li>
+    <ul class="list-disc list-inside text-slate-700 space-y-2">
+      <li>Implement weekly SQL-updated dashboards for inventory management.</li>
+      <li>Prioritize high-demand cities and balance stock across regions.</li>
+      <li>Use interactive Power BI simulations for operational planning.</li>
+      <li>Continuously refine forecasts using historical data and registrations.</li>
     </ul>
   </div>
   <div class="card">
     <h3 class="text-xl font-bold mb-4" id="resultTitle">Results</h3>
     <ul class="list-disc list-inside text-slate-700 space-y-2">
-      <li>Inventory reduced by 7% overall</li>
+      <li>Overall inventory reduced by 7%</li>
       <li>Forecast error improved by 22%</li>
-      <li>Decision speed increased by 15%</li>
-      <li>Regional stock balance optimized across 6 cities</li>
+      <li>Decision-making speed increased by 15%</li>
+      <li>Balanced stock across 6 major cities</li>
     </ul>
   </div>
 </section>
@@ -101,13 +120,17 @@ let de=false;
 langBtn.onclick=()=>{
   de=!de;
   heroTitle.textContent = de ? "Prognose der Nachfrage nach Elektrofahrzeugen – Deutschland" : "Electric Vehicle Demand Forecast – Germany";
-  heroSub.textContent = de ? "Die schnelle Einführung von Elektrofahrzeugen hat regionale Bestandsungleichgewichte verursacht, was zu Überbeständen und Engpässen führt. Mithilfe historischer Verkaufs- und Registrierungsdaten haben wir die Bestandsverteilung optimiert und die Prognosegenauigkeit verbessert." :
-                             "The rapid adoption of electric vehicles has created regional inventory imbalances, leading to both overstock and shortages. Using historical sales & registration data, we optimized allocations and improved forecast accuracy.";
+  heroSub.textContent = de ? "Die schnelle Einführung von Elektrofahrzeugen hat regionale Bestandsungleichgewichte verursacht. Einige Städte haben Überbestände, andere Engpässe. Mit historischen Verkaufs- und Registrierungsdaten optimierten wir die Verteilung und verbesserten die Prognosegenauigkeit." :
+                             "The rapid adoption of electric vehicles (EVs) has created regional inventory imbalances. Some cities experienced overstock, while others faced shortages. Using historical sales and registration data, we optimized allocations and improved forecast accuracy.";
   invLabel.textContent = de ? "Bestandsreduzierung" : "Inventory Reduction";
   errorLabel.textContent = de ? "Prognosefehler-Verbesserung" : "Forecast Error Improvement";
   speedLabel.textContent = de ? "Erhöhung der Entscheidungsgeschwindigkeit" : "Decision Speed Increase";
   forecastTitle.textContent = de ? "Prognose vs. tatsächliche Nachfrage" : "Forecast vs Actual Demand";
   regionalTitle.textContent = de ? "Regionaler Bestand – Vorher & Nachher" : "Regional Inventory – Before & After";
+  problemTitle.textContent = de ? "Problemdefinition" : "Problem Definition";
+  problemText.textContent = de ? "Hamburg, Berlin und München zeigten deutliche Bestandsungleichgewichte. Hamburg hatte z.B. 20 Fahrzeuge auf Lager, während 50 Bestellungen eingingen, was zu Überbeständen führte. Berlin hatte 10 Fahrzeuge für 25 Bestellungen, was potenzielle Engpässe verursachte. Unsere Analyse zielte darauf ab, die Bestände regional zu optimieren." :
+                               "Hamburg, Berlin, and Munich exhibited significant inventory imbalances. For example, Hamburg had 20 vehicles in stock while 50 orders arrived, creating overstock costs, whereas Berlin had 10 vehicles for 25 orders, leading to potential shortages. Our analysis aimed to optimize stock allocation regionally.";
+  dataTitle.textContent = de ? "Daten & Methodik" : "Data & Methodology";
   recTitle.textContent = de ? "Empfehlungen" : "Recommendations";
   resultTitle.textContent = de ? "Ergebnisse" : "Results";
 };
@@ -124,14 +147,14 @@ function animateValue(id, start, end, duration) {
       current = end;
       clearInterval(timer);
     }
-    obj.textContent = id==="decisionSpeed"? Math.round(current)+"%" : Math.round(current);
+    obj.textContent = id==="decisionSpeed"? Math.round(current)+"%" : Math.round(current)+"%";
   }, 50);
 }
 animateValue("invReduction", 0, 7, 1500);
 animateValue("forecastError", 0, 22, 1500);
 animateValue("decisionSpeed", 0, 15, 1500);
 
-// Forecast vs Actual Chart
+// Charts
 const ctxForecast = document.getElementById('forecastChart').getContext('2d');
 new Chart(ctxForecast, {
   type: 'line',
@@ -145,7 +168,6 @@ new Chart(ctxForecast, {
   options:{ responsive:true, plugins:{legend:{position:"top"}}, scales:{y:{beginAtZero:true}} }
 });
 
-// Regional Inventory Chart
 const ctxRegional = document.getElementById('regionalChart').getContext('2d');
 new Chart(ctxRegional, {
   type: 'bar',
