--- a/cases/ev-demand.html
+++ b/cases/ev-demand.html
@@ -39,28 +39,28 @@
   </p>
 </header>
 
-<!-- KPI ANIMATION -->
-<section class="max-w-6xl mx-auto px-6 mb-10 flex justify-around text-center">
-  <div class="card">
-    <p class="kpi" id="invReduction">0%</p>
-    <p class="kpi-label" id="invLabel">Inventory Reduction</p>
-  </div>
-  <div class="card">
-    <p class="kpi" id="forecastError">0%</p>
-    <p class="kpi-label" id="errorLabel">Forecast Error Improvement</p>
-  </div>
-  <div class="card">
-    <p class="kpi" id="decisionSpeed">0%</p>
-    <p class="kpi-label" id="speedLabel">Decision Speed Increase</p>
-  </div>
-</section>
-
 <!-- PROBLEM DEFINITION -->
 <section class="max-w-6xl mx-auto px-6 mb-10">
   <h2 class="text-2xl font-bold mb-4" id="problemTitle">Problem Definition</h2>
-  <p id="problemText" class="text-slate-700 mb-2">
+  <p id="problemText" class="text-slate-700 mb-6">
     Hamburg, Berlin, and Munich exhibited significant inventory imbalances. For example, Hamburg had 20 vehicles in stock while 50 orders arrived, creating overstock costs, whereas Berlin had 10 vehicles for 25 orders, leading to potential shortages. Our analysis aimed to optimize stock allocation regionally.
   </p>
+
+  <!-- KPI ANIMATION (PROBLEM ALTINDA) -->
+  <div class="flex justify-around text-center">
+    <div class="card">
+      <p class="kpi" id="invReduction">0%</p>
+      <p class="kpi-label" id="invLabel">Inventory Reduction</p>
+    </div>
+    <div class="card">
+      <p class="kpi" id="forecastError">0%</p>
+      <p class="kpi-label" id="errorLabel">Forecast Error Improvement</p>
+    </div>
+    <div class="card">
+      <p class="kpi" id="decisionSpeed">0%</p>
+      <p class="kpi-label" id="speedLabel">Decision Speed Increase</p>
+    </div>
+  </div>
 </section>
 
 <!-- DATA & METHODOLOGY -->
@@ -147,7 +147,7 @@ function animateValue(id, start, end, duration) {
       current = end;
       clearInterval(timer);
     }
-    obj.textContent = id==="decisionSpeed"? Math.round(current)+"%" : Math.round(current)+"%";
+    obj.textContent = Math.round(current)+"%";
   }, 50);
 }
 animateValue("invReduction", 0, 7, 1500);
