--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -73,6 +73,21 @@
   </ul>
 </section>
 
+<!-- INTERACTIVE PROTOTYPE -->
+<section id="uxAppDemo" class="max-w-6xl mx-auto px-6 mb-20">
+  <h3 class="text-2xl font-bold mb-4">Interactive Onboarding Prototype</h3>
+  <p class="text-slate-600 mb-4">
+    The live onboarding flow can be explored directly below. All interactions and steps are fully functional.
+  </p>
+  <iframe 
+    src="https://secure-onboarding-flow--ozgunbatuhan.replit.app/login" 
+    width="100%" 
+    height="600" 
+    class="rounded-3xl shadow-lg border"
+    style="border:1px solid #e5e7eb;">
+  </iframe>
+</section>
+
 <!-- GRAPHS -->
 <section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-2 gap-8">
   <div class="card">
@@ -150,4 +165,3 @@ new Chart(ctxDropOff,{
 
 </body>
 </html>
-
