--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -79,13 +79,13 @@
   <p class="text-slate-600 mb-4">
     The live onboarding flow can be explored directly below. All interactions and steps are fully functional.
   </p>
-  <iframe 
-    src="https://secure-onboarding-flow--ozgunbatuhan.replit.app/login" 
-    width="100%" 
-    height="600" 
-    class="rounded-3xl shadow-lg border"
-    style="border:1px solid #e5e7eb;">
-  </iframe>
+  <div style="position:relative; padding-bottom:130%; height:0; overflow:hidden; border-radius:1.5rem; box-shadow:0 4px 12px rgba(0,0,0,0.05);">
+    <iframe 
+      src="https://secure-onboarding-flow--ozgunbatuhan.replit.app" 
+      style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;" 
+      allowfullscreen>
+    </iframe>
+  </div>
 </section>
 
 <!-- GRAPHS -->
