--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -3,14 +3,13 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Mobile App UX Research – Banking Flow | Batuhan Dogan Portfolio</title>
+<title>Mobile App UX Research – Banking Flow</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  .kpi { font-size: 2rem; font-weight: bold; color: #16a34a; }
-  .kpi-label { font-size: 1rem; color: #374151; }
-  .card { background:white; border-radius:1.5rem; padding:1.5rem; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
-  .hover-link { color:#2563eb; text-decoration:underline; }
+@keyframes slideUp { from {opacity:0; transform:translateY(30px);} to {opacity:1; transform:translateY(0);} }
+.animate-slideUp { animation-name:slideUp; animation-duration:1s; animation-fill-mode:forwards; }
+.card { background:white; padding:1.5rem; border-radius:1.5rem; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
 </style>
 </head>
 
@@ -18,140 +17,117 @@
 
 <!-- NAV -->
 <nav class="fixed w-full bg-white/90 backdrop-blur border-b z-50">
-  <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-    <a href="../index.html" class="font-black text-xl hover:text-emerald-600">Batuhan Dogan</a>
-    <button id="langBtn" class="border px-3 py-1 rounded-full hover:bg-slate-100">EN/DE</button>
+  <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
+    <a href="index.html" class="font-black text-xl hover:underline">Batuhan Dogan</a>
+    <div class="flex gap-4 items-center text-sm font-semibold">
+      <button id="langBtn" class="border px-3 py-1 rounded-full hover:bg-slate-100">🇩🇪</button>
+    </div>
   </div>
 </nav>
 
-<!-- EXECUTIVE SUMMARY -->
-<header class="pt-32 max-w-6xl mx-auto px-6 mb-10 text-center">
-  <h1 id="heroTitle" class="text-4xl md:text-5xl font-extrabold mb-4">
+<!-- HERO -->
+<header class="pt-28 max-w-7xl mx-auto px-6 mb-20">
+  <h1 id="heroTitle" class="text-5xl font-black mb-6 leading-tight">
     Mobile App UX Research – Banking Flow
   </h1>
-  <p id="heroSub" class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto mb-4">
-    Drop-offs occurred during identity verification and onboarding. User journeys were mapped and Figma prototypes were tested with 42 participants. UX improvements were derived to enhance completion rates and user satisfaction.
+  <p id="heroSub" class="text-lg text-slate-600 max-w-3xl">
+    User onboarding flow was analyzed to reduce drop-offs during identity verification.
   </p>
 </header>
 
-<!-- KPI ANIMATION -->
-<section class="max-w-6xl mx-auto px-6 mb-10 grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
-  <div class="card">
-    <p class="kpi" id="completionRate">0%</p>
-    <p class="kpi-label">Completion Rate Increase</p>
-  </div>
-  <div class="card">
-    <p class="kpi" id="dropOffReduction">0%</p>
-    <p class="kpi-label">Drop-Off Reduction</p>
-  </div>
-  <div class="card">
-    <p class="kpi" id="usabilityScore">0%</p>
-    <p class="kpi-label">Usability Score</p>
-  </div>
-</section>
-
-<!-- MAIN CONTENT GRID -->
-<section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-3 gap-8 items-start">
-  <!-- Left Column: Problem & Data -->
-  <div class="md:col-span-1 space-y-6">
-    <div class="card">
-      <h2 class="text-xl font-bold mb-2">Problem Definition</h2>
-      <p class="text-slate-700">High drop-off rates during identity verification and onboarding were observed. Completion rates varied across users, and frustrations were recorded in qualitative interviews.</p>
+<!-- MAIN CONTENT -->
+<section class="max-w-6xl mx-auto px-6 mb-40">
+  <div class="grid md:grid-cols-3 gap-8 items-start">
+    
+    <!-- Left: Problem & Data -->
+    <div class="space-y-6">
+      <div class="card">
+        <h2 class="text-xl font-bold mb-2">Problem Definition</h2>
+        <p class="text-slate-700">
+          Identity verification and onboarding caused high drop-off rates across users. Friction points were identified via journey mapping and qualitative interviews.
+        </p>
+      </div>
+      <div class="card">
+        <h2 class="text-xl font-bold mb-2">Data & Methodology</h2>
+        <ul class="list-disc list-inside text-slate-700 space-y-1">
+          <li>User journeys mapped and friction points highlighted.</li>
+          <li>Figma prototypes tested with 42 participants.</li>
+          <li>Metrics recorded and analyzed before and after UX improvements.</li>
+        </ul>
+        <p class="text-sm text-blue-600 mt-2">
+          Data sources: <a href="https://www.figma.com/file/XYZ" target="_blank" class="underline">Figma Prototype</a>
+        </p>
+      </div>
     </div>
-    <div class="card">
-      <h2 class="text-xl font-bold mb-2">Data & Methodology</h2>
-      <ul class="list-disc list-inside text-slate-700 space-y-1">
-        <li>User journeys mapped and friction points identified.</li>
-        <li>Figma wireframes & interactive prototypes tested with 42 participants.</li>
-        <li>Feedback coded to highlight recurring pain points.</li>
-        <li>Metrics measured and compared before & after UX improvements.</li>
-      </ul>
-    </div>
-  </div>
 
-  <!-- Center Column: Phone -->
-  <div class="md:col-span-1">
-    <div style="position:relative; padding-bottom:56%; height:0; overflow:hidden; border-radius:1.5rem; box-shadow:0 4px 12px rgba(0,0,0,0.05);">
+    <!-- Center: iPhone 14 Pro App -->
+    <div class="flex justify-center transform translate-y-10 opacity-0 animate-slideUp" style="animation-delay:0.3s;">
       <iframe 
         src="https://secure-onboarding-flow--ozgunbatuhan.replit.app" 
-        style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;" 
+        width="430" height="932" 
+        style="border-radius:1.5rem; border:0; box-shadow:0 4px 12px rgba(0,0,0,0.05);" 
         allowfullscreen>
       </iframe>
     </div>
-  </div>
 
-  <!-- Right Column: Graphs -->
-  <div class="md:col-span-1 space-y-6">
-    <div class="card">
-      <h3 class="text-xl font-bold mb-2 text-center">Completion Rate Over Steps</h3>
-      <canvas id="completionChart"></canvas>
+    <!-- Right: KPI & Charts -->
+    <div class="space-y-6">
+      <div class="card">
+        <h3 class="text-xl font-bold mb-2 text-center">Completion Rate Over Steps</h3>
+        <canvas id="completionChart"></canvas>
+      </div>
+      <div class="card">
+        <h3 class="text-xl font-bold mb-2 text-center">Drop-Off By Step</h3>
+        <canvas id="dropOffChart"></canvas>
+      </div>
     </div>
-    <div class="card">
-      <h3 class="text-xl font-bold mb-2 text-center">Drop-Off By Step</h3>
-      <canvas id="dropOffChart"></canvas>
-    </div>
+
   </div>
 </section>
 
-<!-- Recommendations & Results -->
-<section class="max-w-6xl mx-auto px-6 mb-20 grid md:grid-cols-2 gap-8">
-  <div class="card">
-    <h3 class="text-xl font-bold mb-2">Recommendations</h3>
-    <ul class="list-disc list-inside text-slate-700 space-y-2">
-      <li>Identity verification steps simplified; inline validation added.</li>
-      <li>Clear progress indicators and error feedback implemented.</li>
-      <li>Iterative prototype refinements validated via user testing.</li>
-    </ul>
-  </div>
-  <div class="card">
-    <h3 class="text-xl font-bold mb-2">Results</h3>
-    <ul class="list-disc list-inside text-slate-700 space-y-2">
-      <li>Drop-off reduced by 18%</li>
-      <li>Completion rate increased by 20%</li>
-      <li>Positive usability feedback from all participants</li>
-    </ul>
-  </div>
-</section>
+<!-- BACK TO PORTFOLIO -->
+<div class="text-center mb-20">
+  <a href="index.html" class="text-emerald-600 font-bold underline hover:text-emerald-800">Back to Portfolio</a>
+</div>
 
-<!-- Back to Portfolio -->
-<section class="max-w-6xl mx-auto px-6 mb-40 text-center">
-  <a href="../index.html" class="bg-emerald-600 px-8 py-4 rounded-full font-bold text-white hover:bg-emerald-700">Back to Portfolio</a>
-</section>
-
-<!-- JS -->
+<!-- SCRIPT: KPI CHARTS -->
 <script>
-// LANG TOGGLE
-let de=false;
-langBtn.onclick=()=>{
-  de=!de;
-  heroTitle.textContent = de ? "Mobile App UX Research – Banking Flow (DE)" : "Mobile App UX Research – Banking Flow";
-  heroSub.textContent = de ? "Hohe Abbruchraten während Identitätsprüfung und Onboarding. User Journeys wurden analysiert und Figma Prototypen mit 42 Teilnehmern getestet. UX-Verbesserungen wurden abgeleitet, um Abschlussraten zu steigern." :
-                             "Drop-offs occurred during identity verification and onboarding. User journeys were mapped and Figma prototypes were tested with 42 participants. UX improvements were derived to enhance completion rates and user satisfaction.";
-};
-
-// KPI Animation
-function animateValue(id,start,end,duration){
-  let obj=document.getElementById(id);let range=end-start;let current=start;let increment=range/(duration/50);
-  let timer=setInterval(function(){current+=increment;if((increment>0&&current>=end)||(increment<0&&current<=end)){current=end;clearInterval(timer);}
-  obj.textContent=Math.round(current)+"%";},50);
-}
-animateValue("completionRate",0,20,1500);
-animateValue("dropOffReduction",0,18,1500);
-animateValue("usabilityScore",0,95,1500);
-
-// Charts
-const ctxCompletion=document.getElementById('completionChart').getContext('2d');
-new Chart(ctxCompletion,{
-  type:'line',
-  data:{labels:["Step 1","Step 2","Step 3","Step 4","Step 5"],datasets:[{label:"Completion Rate",data:[100,92,85,78,80],borderColor:"rgb(34,197,94)",fill:false,tension:0.3}]},
-  options:{responsive:true,plugins:{legend:{position:"top"}},scales:{y:{beginAtZero:true,max:100}}}
+const ctx1 = document.getElementById('completionChart').getContext('2d');
+new Chart(ctx1, {
+  type: 'bar',
+  data: {
+    labels: ['Step 1','Step 2','Step 3','Step 4'],
+    datasets: [{
+      label: 'Completion %',
+      data: [95, 88, 72, 65],
+      backgroundColor: 'rgb(34,197,94)'
+    }]
+  },
+  options: {
+    responsive:true,
+    plugins:{legend:{display:false}},
+    scales:{y:{beginAtZero:true, max:100, ticks:{callback: v => v+'%'}}}
+  }
 });
 
-const ctxDropOff=document.getElementById('dropOffChart').getContext('2d');
-new Chart(ctxDropOff,{
-  type:'bar',
-  data:{labels:["Step 1","Step 2","Step 3","Step 4","Step 5"],datasets:[{label:"Drop-Off %",data:[0,8,15,22,20],backgroundColor:"rgb(248,113,113)"}]},
-  options:{responsive:true,plugins:{legend:{position:"top"}},scales:{y:{beginAtZero:true,max:25}}}
+const ctx2 = document.getElementById('dropOffChart').getContext('2d');
+new Chart(ctx2, {
+  type: 'line',
+  data: {
+    labels: ['Step 1','Step 2','Step 3','Step 4'],
+    datasets:[{
+      label:'Drop-Off %',
+      data:[5,12,28,35],
+      borderColor:'rgb(239,68,68)',
+      fill:false,
+      tension:0.3
+    }]
+  },
+  options:{
+    responsive:true,
+    plugins:{legend:{display:false}},
+    scales:{y:{beginAtZero:true, max:100, ticks:{callback: v => v+'%'}}}
+  }
 });
 </script>
 
